@@ -2,6 +2,7 @@
 Version 4.3.1.3 'Tolomei':
 	- Reliability fixes (Issue 141 from rfc5766-turn-server).
 	- HTTP/HTTPS echo fixed.
+	- external address mapping fixes for Amazon EC2.
 	
 11/23/2014 Oleg Moskalenko <mom040267@gmail.com>
 Version 4.3.1.2 'Tolomei':
